crates/libs/frieze/tests/ui/serde_flatten_unsupported.stderr
error: frieze: `#[serde(flatten)]` on a field is not supported.
  --> tests/ui/serde_flatten_unsupported.rs:13:13
   |
13 |     #[serde(flatten)]
   |             ^^^^^^^
